--- a/common/common.scss
+++ b/common/common.scss
@@ -7,7 +7,8 @@
     position: fixed;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate3d(-50%, -50%, 0);
     backface-visibility: hidden;
     -webkit-backface-visibility: hidden;
+    will-change: transform;
 }
